Added screenshot SMOB.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,4 +1,8 @@
-2011-12-24 : Christian Mauduit <ufoot@ufoot.org>
+2011-12-27 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added screenshot SMOB.
+
+2011-12-26 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Ported some 0.0.2beta JPEG screenshot code to current tree.
 
