--- a/liquidwar6/doc/img-gdoc.texi
+++ b/liquidwar6/doc/img-gdoc.texi
@@ -1,3 +1,13 @@
+@deftypefun {char *} {lw6img_repr} (lw6img_jpeg_t * @var{jpeg})
+@var{jpeg}:  the jpeg to describe
+
+Returns a string describing the jepg. This is a very short description,
+use it for logs, and to debug stuff. By no means it's a complete exhaustive
+description. Still, the string returned should be unique.
+
+@strong{Return value:}  a dynamically allocated string.
+@end deftypefun
+
 @deftypefun {lw6img_jpeg_t *} {lw6img_screenshot_new} (lw6ker_game_state_t * @var{game_state}, char * @var{user_dir}, int @var{quality})
 @var{game_state}:  game_state to create a screenshot from
 
