Fixed i18n bug, Guile -> C conversion was broken.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-12-31 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed i18n bug, Guile -> C conversion was broken.
+
 	* Massive usage of const char * where suitable.
 
 2011-12-27 : Christian Mauduit <ufoot@ufoot.org>
