--- a/liquidwar6/po/ru.po
+++ b/liquidwar6/po/ru.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6 dev\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-12-30 15:31+0100\n"
+"POT-Creation-Date: 2011-12-31 14:53+0100\n"
 "PO-Revision-Date: 2011-09-20 21:51+0700\n"
 "Last-Translator: Yevgeny Lezhnin <z_lezhnin@mail2000.ru>\n"
 "Language-Team: Russian\n"
@@ -1550,8 +1550,9 @@ msgid "Sound backend"
 msgstr "Звуковая библиотека"
 
 #: src/scriptpo.c:238
-msgid "This is a test node."
-msgstr ""
+#, fuzzy
+msgid "Dummy test node"
+msgstr "проверка узла"
 
 #: src/scriptpo.c:239
 msgid "testing map"
