--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Copyright 2011 -> 2012.
+
 2011-10-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.13beta.
