--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3487,7 +3487,7 @@ Checks wether position is within the given boundary box.
 @strong{Return value:}  1 if OK, 0 if not.
 @end deftypefun
 
-@deftypefun {int} {lw6sys_shape_is_same} (lw6sys_whd_t * @var{shape_a}, lw6sys_whd_t * @var{shape_b})
+@deftypefun {int} {lw6sys_shape_is_same} (const lw6sys_whd_t * @var{shape_a}, const lw6sys_whd_t * @var{shape_b})
 @var{shape_a}:  the first shape to compare
 
 @var{shape_b}:  the other shape to compare
@@ -3497,7 +3497,7 @@ Compares two shapes.
 @strong{Return value:}  1 if same, 0 if not.
 @end deftypefun
 
-@deftypefun {int} {lw6sys_shape_is_same_xy} (lw6sys_whd_t * @var{shape_a}, lw6sys_whd_t * @var{shape_b})
+@deftypefun {int} {lw6sys_shape_is_same_xy} (const lw6sys_whd_t * @var{shape_a}, const lw6sys_whd_t * @var{shape_b})
 @var{shape_a}:  the first shape to compare
 
 @var{shape_b}:  the other shape to compare
