--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added skeleton server start / client join functions.
+
 2012-01-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Copyright 2011 -> 2012.
