--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -234,6 +234,83 @@ to construct a Guile object, we reverse the order.
 @strong{Return value:}  list object containing @code{lw6p2p_entry_t} objects
 @end deftypefun
 
+@deftypefun {int} {lw6p2p_node_server_start} (lw6p2p_node_t * @var{node})
+@var{node}:  node to start
+
+Starts a node in server mode, if node was previously connected to other
+nodes, disconnect it from any peer.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_client_join} (lw6p2p_node_t * @var{node}, char * @var{remote_url})
+@var{node}:  node to use
+
+@var{remote_url}:  url of remote node to join
+
+Starts a node in client mode, joins the given node, 
+if node was previously connected to other
+nodes, disconnect it from any peer.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {void} {lw6p2p_node_server_disconnect} (lw6p2p_node_t * @var{node})
+@var{node}:  node to disconnect
+
+Disconnects a node, if node was previously connected to other
+nodes, disconnect it from any peer. Note that this does not
+affect out-of-band connections, only real game-related links.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_update_info} (lw6p2p_node_t * @var{node}, int @var{round}, char * @var{level}, int @var{required_bench}, int @var{nb_colors}, int @var{max_nb_colors}, int @var{nb_cursors}, int @var{max_nb_cursors}, int @var{nb_nodes}, int @var{max_nb_nodes}, int @var{game_screenshot_size}, void * @var{game_screenshot_data})
+@var{node}:  node to update
+
+@var{round}:  the current round (can have an offset with real round number)
+
+@var{level}:  the name of the current level (map)
+
+@var{required_bench}:  the bench required to connect
+
+@var{nb_colors}:  number of colors playing
+
+@var{max_nb_colors}:  max number of colors allowed
+
+@var{nb_cursors}:  number of cursors playing
+
+@var{max_nb_cursors}:  max number of cursors allowed
+
+@var{nb_nodes}:  number of nodes playing
+
+@var{max_nb_nodes}:  max number of nodes allowed
+
+@var{game_screenshot_size}:  size of screenshot (bytes)
+
+@var{game_screenshot_data}:  screenshot data (byte buffer, contains JPEG)
+
+Updates node info, that is, all the data/metadata which can be displayed
+to other peers and are, by nature, dynamic.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_update_serialized} (lw6p2p_node_t * @var{node}, u_int64_t @var{seq_id}, char * @var{serialized_level}, char * @var{serialized_game_struct}, char * @var{serialized_game_state})
+@var{node}:  node to update
+
+@var{serialized_level}:  level object serialized serialized as an hexa string
+
+@var{serialized_game_struct}:  game struct object serialized as an hexa string
+
+@var{serialized_game_state}:  game state object serialized as an hexa string
+
+Updates the (rather heavy) serialized objects for the game, which are
+required to transmit game context to peers over the network.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
 @deftypefun {int} {lw6p2p_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
