--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-07 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Trying to fix SHA1 support on PPC.
+
 2012-01-04 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added skeleton server start / client join functions.
